--- a/src/Main/Main.csproj
+++ b/src/Main/Main.csproj
@@ -6,6 +6,8 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="AutoMapper" Version="9.0.0" />
+      <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.2" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0.2" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.1" />
